# q-learning

./: .gitignore  CMakeLists.txt  README.md
doc/: documentation.tex
lib/Box2D_v2.3.0/: CMakeLists.txt  CompileHelp.txt
lib/Box2D_v2.3.0/freeglut/: freeglut_cursor.c  freeglut_gamemode.c  freeglut_init.c  freeglut_input_devices.c  freeglut_joystick.c  freeglut_main.c  freeglut_misc.c  freeglut_overlay.c  freeglut_spaceball.c  freeglut_state.c  freeglut_videoresize.c  freeglut_window.c
lib/Box2D_v2.3.0/glui/: algebra3.cpp  arcball.cpp  glui.h  glui_commandline.cpp  glui_edittext.cpp  glui_list.cpp  glui_scrollbar.cpp  glui_textbox.cpp  quaternion.h
plan/: .gitignore  plan.tex
src/: Makefile  agent.cpp  agent.hpp  agent_learner.cpp  agent_learner.hpp  agent_manager.cpp  agent_manager.hpp  configAgent.config  config_reader.cpp  config_reader.hpp  interactor.cpp  interactor.hpp  learning.cpp  learning.hpp  main.cpp  preQlearning.hpp  q-table.cpp  q-table.hpp  simulate.hpp  simulation.cpp  simulation.hpp
src/Box2D_v2.3.0/Box2D/: CompileHelp.txt
src/Box2D_v2.3.0/Box2D/Testbed/: CMakeLists.txt
src/Box2D_v2.3.0/Box2D/Testbed/Tests/: TestCrawler.h  TestCrawler.h~  TestEntries.cpp  TestEntries.cpp~  Testv.h  Testv.h~  emptytest.h~
src/Box2D_v2.3.0/Box2D/Testbed/Tests/others/: PolyShapes.h  Testv.h
src/Testbed/: TestEntries.cpp
src/Testbed/Framework/: TestbedMain.cpp  TestbedMain.h
src/Testbed/NOT_USED/: CMakeLists.txt
src/Testbed/Tests/: TestCrawler.h  TestEntries.cpp
test/: Makefile  test_agent.cpp  test_agent_learner.cpp  test_agent_manager.cpp  test_config_reader.cpp  test_interactor.cpp  test_qtable.cpp  test_simulation.cpp  test_source.cpp
test/files/: configAgent_test.config  config_faulty_test.config
